--- a/content/post/study/转码日志/01.21.md
+++ b/content/post/study/转码日志/01.21.md
@@ -1,9 +1,9 @@
 ---
-title：转码学习day1
-date：2026-01-21
-categories：
+title: "转码学习day1"
+date: 2026-01-21
+categories:
     - study
-tags：
+tags:
     - study
 ---
 
