--- a/content/post/study/转码日志/01.23.md
+++ b/content/post/study/转码日志/01.23.md
@@ -42,7 +42,7 @@ xPos / YaRN 本质仍是 RoPE，只是角度缩放或重参数化。
 
 
 
-attn后，PE相对位置信息（Wq Wk x=e+p 。*query* @ *key*展开到e和p层级的话共四项，相对位置信息保存在最后一项）被破坏，因为$$\begin{pmatrix}\sin a\\\cos a\end{pmatrix}^\top\begin{pmatrix}\alpha&\beta\\\gamma&\delta\end{pmatrix}\begin{pmatrix}\sin b\\\cos b\end{pmatrix}$$，若要满足$$p_i^\top Mp_j=g(j-i)$$，则**M 必须按P随着位置变换同样的频率分块，且每个 2×2 块必须是旋转群的交换子**。
+attn后，PE相对位置信息（Wq Wk x=e+p 。*query* @ *key*展开到e和p层级的话共四项，相对位置信息保存在最后一项）被破坏，因为$$\begin{pmatrix}\sin a\\\cos a\end{pmatrix}^\top\begin{pmatrix}\alpha&\beta\\\gamma&\delta\end{pmatrix}\begin{pmatrix}\sin b\\\cos b\end{pmatrix}$$若要满足$$p_i^\top Mp_j=g(j-i)$$则**M 必须按P随着位置变换同样的频率分块，且每个 2×2 块必须是旋转群的交换子**。
 
 这对于一个用于训练梯度下降的Wq Wk是不可能满足的。而Sin PE在初版transformer之所以可行，是因为上面括号里说的4项中，除了保存相对位置这一项外，其他位置还保留了足够的“绝对位置线索 + 局部统计偏置”，所以对于翻译这么个对相对位置要求没那么高的活计来说，它已经足够优秀。score计算的相对位置“破坏”在翻译里不致命，翻译的主要难点是词义对齐、长程依赖替代 RNN。精细相对距离建模在翻译上并不是那么care的一个问题，这个问题在大模型性能上更重要，而且不是一般重要。
 
@@ -92,7 +92,7 @@ SinPE在Embedding加入，耦合了但是会被线性变换破坏。上面这俩
 
 RoPE与内容耦合，不被线性变换破坏。
 
-> **在要求位置编码通过对 Q,KQ,KQ,K 的无参数线性变换注入、
+> **在要求位置编码通过对 Q,K的无参数线性变换注入、
 并保持 attention 的内积形式与平移等变性的前提下，
 RoPE（或与之等价的二维旋转表示）在结构上是唯一可行的方案。**
 
