--- a/themes/hugo-theme-stack/i18n/en.yaml
+++ b/themes/hugo-theme-stack/i18n/en.yaml
@@ -4,6 +4,9 @@ toggleMenu:
 darkMode:
     other: Dark Mode
 
+lightMode:
+    other: Light Mode
+
 list:
     page:
         one: "{{ .Count }} page"
