表格可读性优化

--- a/content/post/study/日记/1.31.md
+++ b/content/post/study/日记/1.31.md
@@ -27,19 +27,27 @@ Decoder-Only 模型做分类时，通常取**序列最后一个位置**的隐藏
     ...
 )
 不看视频，自己动起手来才发现github的autoxxx还是有点花样的，能够自己帮你处理很多结构。
-比如说Qwen2.5-1.5B本来是文本生成的模型，如果用AutoModelForSequenceClassification去下载它，就会是AutoModelForSequenceClassification:
-┌─────────────────────┐
-│   Qwen Transformer  │  ← 预训练好的（和上面一样）
-├─────────────────────┤
-│   Score Head (2)    │  ← 随机初始化的（num_labels）
-└─────────────────────┘
-原本用AutoModelForCausalLM会是:
-┌─────────────────────┐
-│   Qwen Transformer  │  ← 预训练好的
-├─────────────────────┤
-│   LM Head (151936)  │  ← 预训练好的（词表大小）
-└─────────────────────┘
-分类任务就不是从超大词表里取出预测的下一个结果了。而是像从两个词的词表中抽一个，也就是“好”或者“坏”。
+比如说Qwen2.5-1.5B本来是文本生成的模型，如果用AutoModelForSequenceClassification去下载它，模型结构会自动调整：
+
+### **AutoModelForSequenceClassification** (分类任务)
+
+| 层级 | 组件名称 | 状态 |
+|------|----------|------|
+| 1 | Qwen Transformer | 预训练好的（和上面一样） |
+| 2 | Score Head (2) | 随机初始化的（num_labels） |
+
+### **AutoModelForCausalLM** (生成任务)
+
+| 层级 | 组件名称 | 状态 |
+|------|----------|------|
+| 1 | Qwen Transformer | 预训练好的 |
+| 2 | LM Head (151936) | 预训练好的（词表大小） |
+
+**关键区别**：
+- **分类任务**：最后一层是 Score Head，只输出 2 个分数（对应"好"/"坏"）
+- **生成任务**：最后一层是 LM Head，输出 151936 个分数（词表中的每个词）
+
+分类任务就不是从超大词表里取出预测的下一个结果了，而是像从两个词的词表中抽一个，也就是"好"或者"坏"。
 
 当然，tokenizer还是要的，虽然最后不用根据它把数据映射回真实词，直接用0、1二分类就行，但是Embedding还是要用tokenizer把数据变成词向量。
 今天最后一个工作，理解一下数据预处理。
