--- a/content/post/study/日记/01.21.md
+++ b/content/post/study/日记/01.21.md
@@ -2,9 +2,9 @@
 title: "转码学习day1"
 date: 2026-01-21
 categories:
-    - study
+    - diary
 tags:
-    - study
+    - diary
 ---
 
 早上被冷醒，不得不说软微的暖气真是有点糟糕，晚上十一二点好像还马马虎虎，半夜就慢慢不行了，早上六七点人在意识模糊的时候被冻醒了，但是又爬不起来。接着睡到九点半，实在冻得受不了了，挣扎了一下爬起来。
