--- a/content/post/study/日记/01.22.md
+++ b/content/post/study/日记/01.22.md
@@ -2,9 +2,9 @@
 title: "转码学习day2"
 date: 2026-01-22
 categories:
-    - study
+    - diary
 tags:
-    - study
+    - diary
 ---
 
 睡到中午起床，下午两点半开始学习。
