--- a/content/post/study/日记/2.1.md
+++ b/content/post/study/日记/2.1.md
@@ -2,9 +2,9 @@
 title: 转码学习day12
 date: 2026-02-01
 categories:
-  - study
+  - diary
 tag:
-  - study
+  - diary
 math: true
 ---
 今天没正儿八经学习，昨晚熬夜看了森载大战，一点都不好看（悲）。早上睡了五个小时起来了，要倒一下生物钟，因为明天要早起赶高铁回家。
