--- a/content/post/study/日记/2.2.md
+++ b/content/post/study/日记/2.2.md
@@ -2,9 +2,9 @@
 title: 转码day13：没学习
 date: 2026-02-02
 categories:
-  - study
+  - diary
 tag:
-  - study
+  - diary
 math: true
 ---
 昨晚没睡着，今早五点才睡，七点起就赶动车，在车上待了10小时。二等座很不舒服，也没睡多久，太困了也才睡了俩小时，剩下的时间刷刷视频听听书就过去了。
